# jitsi-magnify

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  UPGRADE.md  docker-compose.yml  renovate.json  setup.cfg
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
.github/workflows/: all.yml  docker-hub.yml  magnify-frontend.yml  magnify.yml  merge-validate.yaml  production-build.yaml  secrets.enc.env
crowdin/: config.yml
docker/auth/: realm.json
docker/files/etc/nginx/conf.d/: default.conf
docs/: README.md  architecture.md  controller_provider.md  env.md  index.md  media.md  models.md  tools.md
env.d/: common  demo  kc_postgresql
env.d/development/: common  crowdin.dist  kc_postgresql  mysql  postgresql
sandbox/: manage.py  settings.py  urls.py  wsgi.py
src/: package.json
src/backend/: .pylintrc  MANIFEST.in  manage.py  setup.cfg  setup.py
src/backend/jitsi_magnify/: settings.py  urls.py  wsgi.py
src/backend/jitsi_magnify/core/: admin.py  api.py  apps.py  exceptions.py  models.py  utils.py  views.py
src/backend/jitsi_magnify/core/migrations/: 0001_initial.py
src/backend/jitsi_magnify/core/models/: __init__.py  user.py
src/backend/jitsi_magnify/tests/: base.py  test_redirect.py  test_utils.py
src/backend/magnify/: settings.py  urls.py
src/backend/magnify/core/: api.py  apps.py  models.py  utils.py  views.py
src/backend/magnify/core/migrations/: 0001_initial.py  0002_auto_20220616_0859.py
src/backend/magnify/tests/: test_redirect.py
src/demo/backend/: setup.cfg  setup.py  urls.py  wsgi.py
src/demo/frontend/: package.json
src/demo/frontend/src/: App.tsx  index.tsx
src/email/: package.json
src/email/mjml/: signup.mjml
src/email/mjml/partial/: footer.mjml  header.mjml  hello.mjml
src/frontend/: .eslintrc  .eslintrc.js  .prettierignore  .prettierrc  jest-setup.ts  jest.config.js  jest.config.ts  package-lock.json  package.json  public-path.js  rollup.config.js  tsconfig.json  turbo.json  webpack.config.js
src/frontend/.storybook/: preview.js  theme.js
src/frontend/demo/: .env.example  .env.local  .eslintrc.js  jest-setup.ts  jest.config.js  package.json  tsconfig.json
src/frontend/demo/i18n/: frontend.json
src/frontend/demo/i18n/locales/: fr-FR.json
src/frontend/demo/public/: index.html  manifest.json
src/frontend/demo/src/: App.test.tsx  App.tsx  index.tsx
src/frontend/demo/src/translations/: fr-FR.json
src/frontend/demo/src/views/: 404.tsx  default.tsx  group.tsx  groups.tsx  jitsi.tsx  (+5 more)
src/frontend/i18n/: compile-translations.js
src/frontend/js/: index.tsx  settings.ts
src/frontend/js/types/: globals.d.ts
src/frontend/js/utils/: context.ts
src/frontend/magnify/: .eslintrc.js  .prettierignore  .prettierrc  jest-setup.ts  jest.config.ts  package.json  rollup.config.js  tsconfig.json
src/frontend/magnify/.storybook/: main.js  preview-head.html  preview.js  theme.js
src/frontend/magnify/i18n/: compile-translations.js  frontend.json
src/frontend/magnify/src/: index.ts
src/frontend/sandbox/: .eslintrc.json  cunningham.ts  index.html  package.json  setupTests.ts  tsconfig.json  vite.config.ts
src/frontend/sandbox/public/: config.json
src/frontend/sandbox/src/: App.tsx  cunningham-tokens.css  cunningham-tokens.ts  index.css  main.tsx
src/frontend/scripts/: package.json  tsconfig.json
src/frontend/scripts/src/: addIcon.ts  componentPath.ts  generateComponent.templates.ts  generateComponent.ts  generateIcon.templates.ts  generateIcon.ts
src/frontend/scss/: _main.scss
src/frontend/scss/colors/: _palette.scss  _schemes.scss  _theme.scss
src/frontend/scss/components/: _footer.scss  _header.scss  _subheader.scss
src/frontend/scss/settings/: _fonts.scss
src/frontend/src/components/: index.ts
src/magnify/: LICENSE  __init__.py  settings.py  setup.cfg
src/magnify/apps/core/: admin.py  api.py  apps.py  authentication.py  context_processors.py  factories.py  forms.py  models.py  permissions.py  tokens.py  urls.py  utils.py  views.py
src/magnify/magnify/rooms/: models.py  urls.py  views.py
src/magnify/rooms/: apps.py  views.py
src/magnify/rooms/migrations/: 0001_initial.py
src/magnify/tests/apps/: manage.py
src/terraform/: output.tf  providers.tf  state.tf  storage.tf  variables.tf
src/terraform/create_state_bucket/: .terraform.lock.hcl  provider.tf  state.tf  swift.tf
src/tests/apps/rooms/: test_redirect.py
src/tray/: tray.yml
src/tray/vars/all/: main.yml
src/tray/vars/vault/: main.yml.j2
tests/apps/core/: test_api_users.py  test_core_api_frontend_configuration.py  test_core_api_groups.py  test_core_api_meetings.py  test_core_api_room_group_access.py  test_core_api_room_group_relations.py  test_core_api_room_user_access.py  test_core_api_room_user_relations.py  test_core_api_rooms.py  test_core_api_rooms_meetings.py  test_core_api_users.py  test_core_authentication.py  test_core_authentication_delegated_jwt_authentication.py  test_core_factories_groups.py  test_core_factories_labels.py  test_core_factories_meetings.py  test_core_factories_rooms.py  test_core_models_groups.py  test_core_models_labels.py  test_core_models_meeting_accesses.py  test_core_models_meeting_group_access.py  test_core_models_meeting_group_relations.py  test_core_models_meeting_user_access.py  test_core_models_meeting_user_relations.py  test_core_models_meetings.py  test_core_models_meetings_get_occurences.py  test_core_models_resource_accesses.py  test_core_models_room_group_access.py  test_core_models_room_group_relations.py  test_core_models_room_user_access.py  test_core_models_room_user_relations.py  test_core_models_rooms.py  test_core_models_users.py  test_core_utils_generate_token.py  test_core_views.py
tests/apps/core/api/: test_core_api_frontend_configuration.py  test_core_api_groups.py  test_core_api_meeting_access.py  test_core_api_meetings.py  test_core_api_resource_access_group.py  test_core_api_resource_access_user.py  test_core_api_users.py
tests/sandbox/: test_management_commands.py  test_settings.py
(+579 files in other folders)
