;;
;; magnify package
;;
[metadata]
name = magnify
version = 0.1.0
description = An authentication and room management system for Jitsi built with Django/React
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/jitsi-magnify
license = MIT
keywords = Django, Django-CMS, Open edX
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
# When you install a new package, if you do not want our renovate bot checks
# updates for it, please add the exact name of the package within
# `matchPackageNames` (in the "ignored python dependencies" group) within
# renovate.json file at the root of this repository
install_requires =
    Django
    djangorestframework
    django-parler>=2.0.1
    django-redis>=4.11.0
    Brotli
    django-timezone-field>=5.1
    djangorestframework-simplejwt[crypto]
    drf-yasg<1.21.6
    PyJWT
    python-dateutil
    tzdata
    whitenoise
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.7.8
    black==24.3.0
    cssselect==1.2.0
    defer==1.0.4
    factory-boy==3.3.0
    flake8==7.0.0
    htmlmin==0.1.12
    ipdb==0.13.13
    ipython==8.22.2
    isort==5.13.2
    lxml==5.1.0
    mysqlclient==2.2.4
    msgpack==1.0.8
    pylint==3.1.0
    pylint-django==2.5.5
    pytest==8.1.1
    pytest-cov==5.0.0
    pytest-django==4.8.0
    responses==0.25.0
    time-machine==2.14.1
    pytz==2024.1
ci =
    twine==5.0.0
sandbox =
    django-configurations==2.5.1
    django-cors-headers==4.3.1
    dockerflow==2024.3.0
    factory-boy==3.3.0
    gunicorn==21.2.0
    psycopg2-binary==2.9.9
    sentry-sdk==1.44.0

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_django=django
known_magnify=magnify
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,MAGNIFY,FIRSTPARTY,LOCALFOLDER
skip_glob=src/frontend/node_modules/**/*,venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests
filterwarnings =
    ignore:::(?!(tests|magnify))
