;;
;; magnify package
;;
[metadata]
name = magnify
version = 0.1.0
description = An authentication and room management system for Jitsi built with Django/React
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/jitsi-magnify
license = MIT
keywords = Django, Django-CMS, Open edX
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
# When you install a new package, if you do not want our renovate bot checks
# updates for it, please add the exact name of the package within
# `matchPackageNames` (in the "ignored python dependencies" group) within
# renovate.json file at the root of this repository
install_requires =
    Django
    djangorestframework
    django-parler>=2.0.1
    django-redis>=4.11.0
    Brotli
    django-timezone-field>=5.1
    djangorestframework-simplejwt[crypto]
    drf-yasg<1.21.6
    PyJWT
    python-dateutil
    tzdata
    whitenoise
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.7.10
    black==24.10.0
    cssselect==1.2.0
    defer==1.0.4
    factory-boy==3.3.1
    flake8==7.1.1
    htmlmin==0.1.12
    ipdb==0.13.13
    ipython==8.28.0
    isort==5.13.2
    lxml==5.3.0
    mysqlclient==2.2.5
    msgpack==1.1.0
    pylint==3.3.1
    pylint-django==2.6.1
    pytest==8.3.3
    pytest-cov==5.0.0
    pytest-django==4.9.0
    responses==0.25.3
    time-machine==2.16.0
    pytz==2024.2
ci =
    twine==5.1.1
sandbox =
    django-configurations==2.5.1
    django-cors-headers==4.5.0
    dockerflow==2024.4.2
    factory-boy==3.3.1
    gunicorn==23.0.0
    psycopg2-binary==2.9.10
    sentry-sdk==2.17.0

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_django=django
known_magnify=magnify
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,MAGNIFY,FIRSTPARTY,LOCALFOLDER
skip_glob=src/frontend/node_modules/**/*,venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests
filterwarnings =
    ignore:::(?!(tests|magnify))
