;;
;; Jitsi magnify package
;;
[metadata]
name = jitsi_magnify
version = 0.0.1
description = Manage jitsi access with jitsi magnify
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Université Numérique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/jitsi-magnify
license = MIT
keywords = Django, jitsi, jwt
classifiers =
    Development Status :: 1 - Beta
    Framework :: Django
    Framework :: Django :: 3.1.5
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
install_requires =
    arrow==1.2.2
    Brotli==1.0.9
    boto3==1.20.46
    django<4
    django-admin-sortable2==1.0.3
    django-configurations==2.3.2
    django-cors-headers==3.11.0
    djangorestframework==3.13.1
    djangorestframework-simplejwt==5.0.0
    django-storages==1.12.3
    dockerflow==2021.7.0
    gunicorn==20.1.0
    url-normalize==1.4.3
    psycopg2-binary==2.9.3
    PyJWT==2.1.0
    requests==2.27.1
    sentry-sdk==1.5.4
    whitenoise==5.3.0

package_dir =
    =.
packages = find:
zip_safe = True

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    bandit==1.7.2
    black==22.1.0
    flake8==4.0.1
    ipdb==0.13.9
    ipython==8.0.1
    isort==5.10.1
    mypy==0.931
    pdfminer.six==20211012
    pyfakefs==4.5.4
    pylint-django==2.5.0
    pylint==2.12.2
    pytest-cov==3.0.0
    pytest-django==4.5.2
    pytest==6.2.5
    responses==0.17.0
    types-pytz==2021.3.4
    types-requests==2.27.7
    cssselect==1.1.0

[bdist_wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*

[isort]
known_django = django
known_jitsi_magnify = jitsi_magnify
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,jitsi_magnify,FIRSTPARTY,LOCALFOLDER
skip_glob = venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py

[mypy]
ignore_missing_imports = True

[mypy-*.migrations.*]
# Django migrations should not be type checked
ignore_errors = True
