;;
;; Magnify package
;;
[metadata]
name = magnify-demo
version = 0.0.1
description = Manage jitsi access with magnify
author = Open FUN (France Université Numérique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/jitsi-magnify
license = MIT
keywords = Django, jitsi, jwt
classifiers =
    Development Status :: 1 - Beta
    Framework :: Django
    Framework :: Django :: 3.1.5
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
install_requires =
    django<4
    magnify=0.0.1

[bdist_wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*
